src/content/docs/en/sdk/android/v5/features/short-links.mdx
---
title: Resolve short branded links
description: Resolve short links that were created in Campaign Lab.
slug: en/sdk/android/features/short-links
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /en/sdk/android/v4/features/short-links
---

Adjust's [link shortener solution](https://help.adjust.com/en/article/short-branded-links) converts your complex and long links into cleaner and shorter links. The shortened links retain deep link and campaign information, and route users to the app store, if they don't have your app installed.

Use the method described in this section to resolve your short links.

## Set up deep linking in the Adjust SDK {#set-up-deep-linking-in-the-adjust-sdk}

In the Adjust SDK, add support for the following:

- [URI schemes](/en/sdk/android/features/deep-links)
- [Deferred deep linking](/en/sdk/android/features/deep-links#deferred-deep-linking)

<Callout type="note">

You don't need to set up [Link resolution](/en/sdk/android/features/deep-links#link-resolution) to use Adjust’s link shortener solution.

</Callout>

## Set up the Adjust SDK to resolve short links {#set-up-the-adjust-sdk-to-resolve-short-links}

<CodeBlock title="Method signature">

```java
public static void processAndResolveDeeplink(Uri url, Context context, OnDeeplinkResolvedListener callback)
```

</CodeBlock>

The Adjust SDK delivers deep link information within your activity's intent object using either the `onCreate` or `onNewIntent` method. The deep link is available on the `data` property of the `intent` object. You can access this deep link once the app is launched and one of these methods has fired. You can then call the `processAndResolveDeeplink` method to resolve the short Adjust link URL that deep linked users into your app.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
override fun onCreate(savedInstanceState: Bundle?) {
   super.onCreate(savedInstanceState)
   setContentView(R.layout.activity_main)

   val intent = intent
   val webpageURL = intent.data
   val adjustDeeplink = AdjustDeeplink(webpageURL)
   Adjust.processAndResolveDeeplink(adjustDeeplink, this) { resolvedLink ->
      // resolvedLink contains either resolved URL (if it was unshortened)
      // or just echoed URL if it was not shortened
      Log.d("Example", resolvedLink)
   }
}
```

</Tab>
<Tab title="Java" sync="java">

```java
@Override
protected void onCreate(Bundle savedInstanceState) {
   super.onCreate(savedInstanceState);
   setContentView(R.layout.activity_main);

   Intent intent = getIntent();
   Uri webpageURL = intent.getData();
   AdjustDeeplink adjustDeeplink = new AdjustDeeplink(webpageURL);
   Adjust.processAndResolveDeeplink(adjustDeeplink, this, new   OnDeeplinkResolvedListener() {
      @Override
      public void onDeeplinkResolved(String resolvedLink) {
            // resolvedLink contains either resolved URL (if it was unshortened)
            // or just echoed URL if it was not shortened
            Log.d("Example", resolvedLink);
      }
   });
}
```

</Tab>
</Tabs>

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
override fun onNewIntent(intent: Intent?) {
   super.onNewIntent(intent)

   val webpageURL = intent.data
   val adjustDeeplink = AdjustDeeplink(webpageURL)
   Adjust.processAndResolveDeeplink(adjustDeeplink, this) { resolvedLink ->
      // resolvedLink contains either resolved URL (if it was unshortened)
      // or just echoed URL if it was not shortened
      Log.d("Example", resolvedLink)
   }
}
```

</Tab>
<Tab title="Java" sync="java">

```java
@Override
protected void onNewIntent(Intent intent) {
   super.onNewIntent(intent);

   Uri webpageURL = intent.getData();
   AdjustDeeplink adjustDeeplink = new AdjustDeeplink(webpageURL);
   Adjust.processAndResolveDeeplink(adjustDeeplink, this, new   OnDeeplinkResolvedListener() {
   @Override
   public void onDeeplinkResolved(String resolvedLink) {
            // resolvedLink contains either resolved URL (if it was unshortened)
            // or just echoed URL if it was not shortened
            Log.d("Example", resolvedLink);
   }
   });
}
```

</Tab>
</Tabs>

In case the link you sent to `processAndResolveDeeplink` method was shortened, `resolvedLink` returns the extended original link. In case the link you passed to the method wasn't shortened, then `resolvedLink` contains the same link you have passed.

## Handling Deeplinks with Referrer {#handling-deeplinks-with-referrer}

An optional referrer URL used to track source of the deeplink or app open for better attribution or reattribution and deep linking. For example, channels like SEO / Organic Search, Adjust links are not directly used. If the client's root domain has Android App Links implemented and triggers an app opening, For such channels, we may have to rely on signals coming from the referrer URL to attribute or reattribute users.

#### Set up a Referrer URL

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
override fun onNewIntent(intent: Intent?) {
   super.onNewIntent(intent)

   val webpageURL = intent.data
   val adjustDeeplink = AdjustDeeplink(webpageURL)
   val referrer = getReferrer() //Activity#getReferrer()
   referrer?.let {
      adjustDeeplink.setReferrer(referrer)
   }
   Adjust.processAndResolveDeeplink(adjustDeeplink, this) { resolvedLink ->
      // resolvedLink contains either resolved URL (if it was unshortened)
      // or just echoed URL if it was not shortened
      Log.d("Example", resolvedLink)
   }
}
```

</Tab>
<Tab title="Java" sync="java">

```java
@Override
protected void onNewIntent(Intent intent) {
   super.onNewIntent(intent);

   Uri webpageURL = intent.getData();
   AdjustDeeplink adjustDeeplink = new AdjustDeeplink(webpageURL);
    // If referrer URL is available, add it to the deeplink object
    Uri referrer = getReferrer(); //Activity#getReferrer()
    if (referrer != null) {
        adjustDeeplink.setReferrer(referrer);
    }
   Adjust.processAndResolveDeeplink(adjustDeeplink, this, new   OnDeeplinkResolvedListener() {
   @Override
   public void onDeeplinkResolved(String resolvedLink) {
         // resolvedLink contains either resolved URL (if it was unshortened)
         // or just echoed URL if it was not shortened
         Log.d("Example", resolvedLink);
   }
   });
}
```

</Tab>
</Tabs>
